--- a/streamapp/templates/streamapp/home.html
+++ b/streamapp/templates/streamapp/home.html
@@ -1,9 +1,25 @@
-<html>
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
   <head>
-    <title>ASL Interpreter Main Page</title>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <link rel="stylesheet" href="{% static 'css/main.css' %}">
+    <title>ASL Interpreter</title>
   </head>
   <body>
-    <h1>ASL Interpreter</h1>
-    <img src="{% url 'webcam_feed' %}">
+    <div class="page-header">
+      <h1>asli</h1>
+    </div>
+    <div>
+      <img src="{% url 'webcam_feed' %}" class="center">
+    <div>
+      <form>
+        <p>ENTER SIGN TO TRANSLATE: <input type="text" name="sign"></p>
+        <p><input type="submit" value="Submit"></p>
+      </form>
+    </div>
+    </div>
   </body>
 </html>
