Made adjustments to stream size

--- a/streamapp/templates/streamapp/home.html
+++ b/streamapp/templates/streamapp/home.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="page-header">
-      <h1>asli</h1>
+      <h1>American Sign Language Interpreter</h1>
     </div>
     <div>
       <img src="{% url 'webcam_feed' %}" class="center">
