--- a/streamapp/static/css/main.css
+++ b/streamapp/static/css/main.css
@@ -7,7 +7,7 @@ h1 {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
+    width: 60%;
     padding: 20px;
 }
 
@@ -31,3 +31,8 @@ form {
     text-align: center;
 }
 
+input[type=text] {
+    width: 30%;
+    margin: 8px 0;
+    box-sizing: border-box;
+  }
