--- a/streamapp/templates/streamapp/home.html
+++ b/streamapp/templates/streamapp/home.html
@@ -15,10 +15,7 @@
     <div>
       <img src="{% url 'webcam_feed' %}" class="center">
     <div>
-      <form>
-        <p>ENTER SIGN TO TRANSLATE: <input type="text" name="sign"></p>
-        <p><input type="submit" value="Submit"></p>
-      </form>
+      <h2>Recognized signs: A - Z, Space, Blank, Delete</h2>
     </div>
     </div>
   </body>
